# Swarm-Formation-ROS2

./: .gitignore  README.md  activate.sh  commands.txt  setup_conda_env.sh
results/: ego_swarm_1.txt
scripts/: change_formation.sh  launch_and_log.sh  launch_and_log_debug.sh  send_goal.sh  verify_drone_movement.sh  verify_slam.sh  verify_topics.sh
src/Utils/odom_visualization/: CMakeLists.txt  package.xml
src/Utils/odom_visualization/src/: odom_visualization.cpp
src/Utils/pose_utils/: CMakeLists.txt  package.xml
src/Utils/quadrotor_msgs/: CMakeLists.txt  package.xml
src/Utils/quadrotor_msgs/src/: encode_msgs.cpp
src/Utils/rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
src/Utils/rviz_plugins/src/: goal_tool.cpp  goal_tool.h  pose_tool.cpp  pose_tool.h
src/Utils/uav_utils/: CMakeLists.txt  package.xml
src/Utils/uav_utils/include/uav_utils/: converters.h  utils.h
src/Utils/uav_utils/scripts/: odom_to_euler.py  send_odom.py  tf_assist.py  topic_statistics.py
src/Utils/uav_utils/src/: uav_utils_test.cpp
src/planner/path_searching/: CMakeLists.txt  package.xml
src/planner/path_searching/include/path_searching/: dyn_a_star.h
src/planner/path_searching/src/: dyn_a_star.cpp
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/config/: arrow_formation.yaml  normal_hexagon.yaml  star_formation.yaml  sutd_formation.yaml
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
src/planner/plan_manage/launch/: advanced_param_launch.py  arrow_launch.py  default.rviz  normal_hexagon_launch.py  run_in_sim_launch.py  rviz_launch.py  simulator_launch.py  star_launch.py  sutd_launch.py
src/planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/planner/swarm_bridge/: CMakeLists.txt  package.xml
src/planner/swarm_bridge/launch/: bridge.launch.py
src/planner/swarm_bridge/src/: bridge_node.cpp
src/planner/swarm_graph/: CMakeLists.txt  package.xml
src/planner/swarm_graph/include/swarm_graph/: swarm_graph.hpp
src/planner/swarm_graph/src/: swarm_graph.cpp
src/planner/traj_opt/: CMakeLists.txt  package.xml
src/planner/traj_opt/include/optimizer/: poly_traj_optimizer.h
src/planner/traj_opt/src/: poly_traj_optimizer.cpp
src/planner/traj_utils/: CMakeLists.txt  package.xml
src/planner/traj_utils/include/traj_utils/: plan_container.hpp  planning_visualization.h
src/planner/traj_utils/src/: planning_visualization.cpp
src/uav_simulator/fake_drone/: CMakeLists.txt  package.xml
src/uav_simulator/fake_drone/src/: poscmd_2_odom.cpp
src/uav_simulator/local_sensing/: CMakeLists.txt  package.xml
src/uav_simulator/local_sensing/src/: euroc.cpp  pcl_render_node.cpp  pointcloud_render_node.cpp
src/uav_simulator/map_generator/: CMakeLists.txt  package.xml
src/uav_simulator/map_generator/src/: random_forest_sensing.cpp
src/uav_simulator/mockamap/: CMakeLists.txt  package.xml
src/uav_simulator/mockamap/include/: maps.hpp
src/uav_simulator/mockamap/launch/: maze2d.launch.py  maze3d.launch.py  mockamap.launch.py  perlin3d.launch.py  post2d.launch.py
src/uav_simulator/mockamap/src/: ces_randommap.cpp  maps.cpp  mockamap.cpp
src/uav_simulator/so3_control/: CMakeLists.txt  package.xml
src/uav_simulator/so3_control/include/so3_control/: so3_control_component.hpp
src/uav_simulator/so3_control/src/: SO3Control.cpp  control_example.cpp  so3_control_node.cpp  so3_control_nodelet.cpp
src/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt  package.xml
src/uav_simulator/so3_quadrotor_simulator/launch/: simulator_example.launch.py
src/uav_simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
src/uav_simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
