<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadrotor_msgs</name>
  <version>0.0.0</version>
  <description>quadrotor_msgs</description>
  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <url>http://ros.org/wiki/quadrotor_msgs</url>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <build_depend>eigen</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
