<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_plugins</name>
  <version>0.1.0</version>
  <description>
    Additional plugins for RViz2
  </description>
  <maintainer email="eeshaojie@ust.hk">Shaojie Shen</maintainer>
  <maintainer email="wwuar@connect.ust.hk">william.wu</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
