<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plan_env</name>
  <version>0.0.0</version>
  <description>The plan_env package</description>

  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
